<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context="micahsquad.com.worklogassistant.CreateJobActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_job_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textSize="20dp"
            android:hint="@string/hint_job" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_job_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_job_name"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/input_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:hint="@string/hint_position"
            android:layout_alignParentEnd="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_job_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_job_position"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/input_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_pay" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/job_select_rounding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/input_layout_job_pay"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:text="@string/job_select_rounding"/>

    <Spinner
        android:id="@+id/job_rounding_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_below="@id/job_select_rounding" />


</RelativeLayout>


