<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="0dp"
    tools:context="micahsquad.com.worklogassistant.TipFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_record_net_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:hint="@string/hint_record_net_sales">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_record_net_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_record_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_record_net_sales"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_credit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:hint="@string/hint_record_credit_card"
            android:layout_alignParentEnd="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_record_tax_collected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_record_credit_card"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_record_tax_collected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_record_tax_collected" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>